--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,26 +7,28 @@
     android:layout_height="match_parent"
     android:background="#444444"
     android:orientation="vertical"
-    android:visibility="invisible"
+    android:visibility="visible"
     tools:visibility="visible">
 
-
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="235dp"
-        android:layout_height="166dp"
-        android:layout_marginTop="276dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/c7dc08ac7ce051a457228506460ac196"
-        tools:layout_editor_absoluteX="86dp" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="273dp"
-        android:layout_height="147dp"
+        android:id="@+id/imageView2"
+        android:layout_width="184dp"
+        android:layout_height="151dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.549"
-        app:srcCompat="@drawable/Matrinx"
-        tools:layout_editor_absoluteX="65dp" />
+        app:layout_constraintVertical_bias="0.514"
+        app:srcCompat="@drawable/robo1" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.544"
+        app:srcCompat="@drawable/matrinx" />
 </androidx.constraintlayout.widget.ConstraintLayout>
